<resources>
    <string name="app_name">OCV Sedapal</string>
    <string name="lbl_btn_iniciar_sesion">Iniciar Sesión</string>
    <string name="lbl_correo">Correo</string>
    <string name="lbl_suministro">N° de suministro</string>
    <string name="lbl_contrasenia">Contraseña</string>
    <string name="txt_ingresa_con_suministro">
        <u>Ingresa con tu suministro</u>
    </string>
    <string name="txt_ingresa_con_correo">
        <u>Ingresa con tu correo</u>
    </string>
    <string name="txt_olvidaste_contrasenia">
        <u>¿Olvidaste tu contraseña?</u>
    </string>
    <string name="txt_no_tienes_cuenta">¿No tienes cuenta?</string>
    <string name="txt_registrate">
        <u>Regístrate</u>
    </string>
    <string name="title_activity_onboarding">OnboardingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="lbl_progressdialog_validando_usuario">Validando usuario</string>
    <string name="lbl_progressdialog_validando_suministro">Validando suministro</string>
    <string name="lbl_correo_incorrecto">Correo Incorrecto</string>
    <string name="lbl_suministro_incorrecto">Suministro Incorrecto</string>
    <string name="lbl_intentar_nuevamente">Intentar de nuevo</string>
    <string name="mensaje_ingrese_numero_suministro_valido">Ingrese un numero de suministro válido</string>
    <string name="mensaje_ingresepassword">Ingrese su contraseña</string>
    <string name="lbl_volver_a_ingresar">Volver a ingresar</string>
    <string name="lbl_btn_ingresar">Ingresar</string>
    <string name="ob_desc1">Disfruta de nuestra oficina virtual renovada.</string>
    <string name="ob_desc2">Podrás pagar tus recibos de manera rápida y segura.</string>
    <string name="ob_desc3">Recibirás notificaciones de cortes y alertas de pago.</string>
    <string name="ob_desc4">Podrás ver el detalle de tus recibos, cada mes.</string>
    <string name="lbl_seleccionar">
        <u>Seleccionar</u>
    </string>
    <string name="lbl_obligatorio_ind">(Obligatorio)</string>
    <string name="lbl_registro_usuario">Registro de usuario</string>
    <string name="lbl_descripcion">Llena todos los campos obligatorios para registrarte y disfrutar de nuestro renovada
        web
    </string>
    <string name="lbl_num_siministro">N° de suministro</string>
    <string name="lbl_donde_encuentro">¿Dónde lo encuentro?</string>
    <string name="lbl_referencia_cobro_1">Referencia de cobro</string>
    <string name="lbl_referencia_cobro_2">Referencia de cobro 2</string>
    <string name="lbl_tipo_solicitante">Tipo de solicitante</string>
    <string name="lbl_tipo_documento">Tipo de documento</string>
    <string name="lbl_num_documento">N° de documento</string>
    <string name="lbl_nombres">Nombres</string>
    <string name="lbl_apellidos_paterno">Apellido Paterno</string>
    <string name="lbl_apellidos_materno">Apellido Materno</string>
    <string name="lbl_nombre_empresa">Nombre de la empresa</string>
    <string name="lbl_sexo">Sexo</string>
    <string name="lbl_distrito">Distrito</string>
    <string name="lbl_direccion">Dirección</string>
    <string name="lbl_direccion_correo">Correo</string>
    <string name="lbl_fecha_nacimiento">Fecha de nacimiento</string>
    <string name="lbl_opcional">Opcional</string>
    <string name="lbl_telefono_1">Teléfono 1</string>
    <string name="lbl_telefono_2">Teléfono 2</string>
    <string name="lbl_telefono">Teléfono</string>
    <string name="lbl_contrasenia_registro">Contraseña</string>
    <string name="lbl_contrasenia_descripcion">Debe ser mayor a 8 dígitos, tener mayúscula, minúsculas y números
    </string>
    <string name="lbl_repetir_contrasenia_descripcion">Debe de coincidir con la contraseña</string>
    <string name="lbl_repetir_contrasenia">Repetir contraseña</string>
    <string name="lbl_debe_coincidir_contrasenia">Debe de coincidir con la contraseña</string>
    <string name="lbl_acepto_terminos_condiciones">Acepto los
        <u>Términos y condiciones</u>
    </string>
    <string name="lbl_recibir_notificaciones_correos">Recibir notificaciones y correos de Sedapal</string>
    <string name="lbl_no_soy_un_robot">No soy un robot</string>
    <string name="lbl_registrarme">REGISTRARME</string>
    <string name="lbl_error_correo">Ingrese un correo válido</string>
    <string name="lbl_error_numero_documento">Ingrese un número de documento válido</string>
    <string name="lbl_error_til_number_supply">Ingrese un número de suministro válido</string>
    <string name="lbl_error_til_pay_reference">Ingrese una referencia de cobro válida</string>
    <string name="lbl_error_til_nombres">Ingrese su(s) nombre(s)</string>
    <string name="lbl_error_til_apellido_1">Ingrese su apellido paterno</string>
    <string name="lbl_error_til_apellido_2">Ingrese su apellido materno</string>
    <string name="lbl_error_til_empresa">Ingrese el nombre de la empresa</string>
    <string name="lbl_error_til_telefono">Ingrese un telefono válido</string>
    <string name="lbl_suministro_valido">El suministro ingresado es válido</string>
    <string name="lbl_suministro_invalido">El suministro ingresado no es válido</string>
    <string name="lbl_suministro_verificado">Suministro verificado</string>
    <string name="lbl_progressdialog_suministro_verif">Verificando suministro</string>
    <string name="lbl_referencia_cobro_verificado">Referencias de cobro verificadas</string>
    <string name="lbl_progressdialog_referencia_cobro">Verificando referencias de cobro</string>
    <string name="lbl_dialog_registro_correcto">¡Gracias por registrarte!</string>
    <string name="lbl_dialog_volver_inicio">Volver a inicio</string>
    <string name="lbl_obligatorio">Obligatorio</string>
    <string name="contenido_terminos_condiciones">
        CONDICIONES PARA ACCEDER AL SERVICIO\n
        a) Registrarse como usuario del servicio y recibir la clave correspondiente enviada en forma electrónica por
        SEDAPAL de un suministro en el cual se tiene legítimo interés.
        b) Disponer del equipo necesario para establecer una conexión a Internet.
        c) Disponer de su propia cuenta de acceso a Internet.\n
        USO Y LIMITACIONES DEL SERVICIO\n
        I.- POLÍTICA DE PRIVACIDAD\n
        1.- Cuando se registra en el servicio se recibe un número de USUARIO que es el mismo del número de suministro de
        agua potable y/o alcantarillado, recibirá además una Clave.
        2.- Ud. es el único responsable si no mantiene la confidencialidad de su cuenta y contraseña.
        3.- Ud. Es el único responsable de cualquier o todas las actividades que ocurran en su cuenta.
        4.- Puede cambiar su contraseña cuando lo desee, siguiendo las instrucciones en la página del servicio.
        5.- El USUARIO notificará inmediatamente a SEDAPAL de cualquier uso no autorizado de su cuenta, o cualquier
        intrusión de seguridad conocida por el USUARIO al correo sedanet@sedapal.com.pe .\n
        II.- RESPONSABILIDADES DEL SERVICIO\n
        1.- SEDAPAL podrá modificar, suspender o terminar el servicio en cualquier momento y sin previo aviso al
        usuario.
        -
        2.– SEDAPAL no se responsabiliza por la interrupción del servicio, sea ocasionado por problemas técnicos
        internos o por parte de terceros, o por cualquier causa que pudiese afectar al SERVICIO.
        3.- SEDAPAL declina cualquier responsabilidad sobre errores que se cometan en el SERVICIO, ya sea de recepción,
        envío, parte o general, siempre que esto dependa terceros.
        III.- PROHIBICIÓN DE VENTA O USO COMERCIAL DEL SERVICIO
        1.- EL USUARIO tiene derecho a usar el SERVICIO estrictamente para los fines de información de su suministro.
        2.- EL USUARIO acepta no revender ni hacer ningún uso comercial de la información que SEDAPAL brinda.\n
        IV.- OTRAS LIMITACIONES \n -
        1.- La Información que SEDAPAL brinda a través de este servicio no puede ser divulgada fuera de los que tengan
        legítimo interés de la información brindada.
        2.- Cumplir con las leyes y regulaciones aplicables a nivel nacional e internacional sobre la transmisión de
        datos técnicos a través del servicio.
        3.- No usar el servicio para propósitos ilegales.
        4.- No interferir o destruir las redes conectadas a este servicio.
        5.- Cumplir con todas las regulaciones, políticas y procedimientos de redes conectadas a este Servicio.\n
        V.- MARCO LEGAL APLICABLE \n -
        1.- Ley de Procedimiento Administrativo General N°27444 (aplicacion supletoria).
        2.- D.S. N° 018-2001-PCM: Garantiza a los ciudadanos el acceso a la información que poseen las entidades de la
        administración publica.
    </string>
    <string name="title_terminos_condiciones">Términos y condiciones del servicio AQUANET</string>
    <string name="lbl_declinar">
        <u>Declinar</u>
    </string>
    <string name="lbl_btn_acepto_terminos">ACEPTO LOS TÉRMINOS</string>
    <string name="lbl_progressdialog_registro_usuario">Registrando usuario</string>
    <string name="lbl_progressdialog_document_verif">Verificando documento</string>
    <string name="lbl_olvide_contrasenia">¿Olvidaste tu contraseña?</string>
    <string name="lbl_ingresa_recupera_contrasenia">Ingresa tu correo para reestablecer tu constraseña</string>
    <string name="lbl_btn_enviar_contrasenia_correo">ENVIAR</string>
    <string name="lbl_volver_contrasenia_correo">
        <u>Volver</u>
    </string>
    <string name="lbl_titulo_recordatorio_contrasenia">Recordatorio de contraseña</string>
    <string name="lbl_descripcion_recordatorio_contrasenia">Usted solicitó recordar el usuario y contraseña de registro
        de Aquanet.
    </string>
    <string name="lbl_btn_volver_inicio">VOLVER AL INICIO</string>
    <string name="lbl_recordatorio_usuario">Usuario</string>
    <string name="lbl_recordatorio_Contraseña">Contraseña</string>
    <string name="mensaje_ingrese_correo_valido">Ingrese un correo válido</string>
    <string name="mensaje_ingrese_correo">Ingrese un correo válido para reestablecer su contraseña</string>
    <string name="lbl_progressdialog_recuperacion_contraseña">Solicitando recuperacion de contraseña</string>
    <string name="lbl_hemos__enviado_correo">Hemos eviando un correo electrónico a</string>
    <string name="lbl_con_su_usuario">con su usuario y contraseña.</string>
    <string name="lbl_olvide_contrasenia_suminsitro">¿Olvidaste tu contraseña?</string>
    <string name="lbl_ingresa_recupera_contrasenia_suministro">Ingresa tu suministro para restablecer tu constraseña
    </string>
    <string name="lbl_btn_enviar_contrasenia_suministro">ENVIAR</string>
    <string name="lbl_edtxt_suministro">Suministro</string>
    <string name="lbl_edtxt_respuesta">Respuesta</string>
    <string name="lbl_propietario">Tipo de solicitante</string>
    <string name="lbl_pregunta_secreta">Pregunta secreta</string>
    <string name="lbl_volver_contrasenia_suministro">
        <u>Volver</u>
    </string>
    <string name="lbl_estado_suministro">Habilitado</string>
    <string name="lbl_titular_suministro">Titular</string>
    <string name="lbl_direccion_suministro">Jr. Nombre del jirón, numero, distrito</string>
    <string name="lbl_deuda_total">Deuda total</string>
    <string name="lbl_monto_total">S/ 000.00</string>
    <string name="lbl_graficos_consumo">Gráficos de consumo</string>
    <string name="lbl_estado">Estado</string>
    <string name="lbl_fecha_recibo">Mes del recibo</string>
    <string name="lbl_tipo_cobro_consumo">Por consumo</string>
    <string name="lbl_vencimiento">Vencimiento</string>
    <string name="lbl_fecha_vencimiento">00/00/0000</string>
    <string name="item_1">Item 1</string>
    <string name="item_2">Item 2</string>
    <string name="item_3">Item 3</string>
    <string name="item_5">Item 5</string>
</resources>