<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llContentDetailPay"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/llContentPaysummanry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtMesRecibo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:textColor="@color/text_color_primary"
                android:text="@string/lbl_fecha_recibo"
                android:textSize="@dimen/row_item_name_text_size_normal" />

            <TextView
                android:id="@+id/txtMontoTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:gravity="top"
                android:fontFamily="@string/font_family_medium"
                android:textColor="@color/text_color_primary"
                android:text="@string/lbl_monto_total"
                android:textSize="@dimen/row_item_name_text_size_medium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtTipoConsumo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:textColor="@color/text_color_secondary"
                android:text="@string/lbl_tipo_cobro_consumo"
                android:textSize="@dimen/row_item_name_text_size_small" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:gravity="top"
                android:layout_marginRight="5dp"
                android:textColor="@color/text_color_secondary"
                android:fontFamily="@string/font_family_light"
                android:text="@string/lbl_vencimiento"
                android:textSize="@dimen/row_item_name_text_size_small" />
            <TextView
                android:id="@+id/txtFechaVencimiento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:gravity="top"
                android:textColor="@color/text_color_secondary"
                android:fontFamily="@string/font_family_medium"
                android:text="@string/lbl_fecha_vencimiento"
                android:textSize="@dimen/row_item_name_text_size_small" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
