<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_marginTop="16dp"
    android:layout_marginLeft="24dp"
    android:layout_marginRight="24dp">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_estado"
                android:fontFamily="@string/font_family_light"
                android:textColor="@color/text_color_secondary"
                android:layout_marginRight="5dp"
        />
        <TextView
                android:id="@+id/txtEstadoSuministro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_estado_suministro"
                android:fontFamily="@string/font_family_regular"
                android:textColor="@color/text_color_primary"
        />
    </LinearLayout>

    <Spinner
        android:id="@+id/spnListNis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        />

    <TextView
        android:id="@+id/txtNombreTitular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_titular_suministro"
        android:textColor="@color/text_color_secondary"
        android:gravity="center_horizontal"
        android:textSize="12sp"
        android:layout_marginTop="8dp"
        />

    <TextView
        android:id="@+id/txtDireccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_direccion_suministro"
        android:textColor="@color/text_color_secondary"
        android:gravity="center_horizontal"
        android:textSize="12sp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="12dp"
    />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"

            android:paddingLeft="8dp"

            android:orientation="horizontal"
            android:background="@color/color_fondo_box">

        <LinearLayout
            android:layout_weight="0.85"
            android:layout_width="0dp"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="13dp"
            android:paddingBottom="13dp"
            android:paddingRight="8dp"
            android:layout_gravity="center_vertical"
        >
            <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:src="@drawable/ic_total_pay"
                    android:layout_marginRight="8dp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_deuda_total"
                    android:textSize="14sp"
                    android:fontFamily="@string/font_family_light"
                    android:textColor="@color/text_color_secondary"
                    android:layout_marginRight="5dp"
                app:autoSizeTextType="uniform"
                app:autoSizeMinTextSize="12sp"
                app:autoSizeMaxTextSize="14sp"/>

            <TextView
                    android:id="@+id/txtDeudaTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_monto_total"
                    android:textSize="14sp"
                    android:fontFamily="@string/font_family_regular"
                    android:textColor="@color/text_color_primary"
                app:autoSizeTextType="uniform"
                app:autoSizeMinTextSize="12sp"
                app:autoSizeMaxTextSize="14sp"
                />

        </LinearLayout>

        <View
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:id="@+id/viewSeparetor"
                android:layout_width="@dimen/row_item_separador_size"
                android:layout_height="match_parent"
                android:background="@color/color_line_Separador" />

        <LinearLayout
                android:id="@+id/llVerGraficosConsumo"
                android:layout_weight="0.15"
                android:layout_width="0dp"
                android:gravity="center_horizontal"
                android:layout_height="match_parent"
                android:orientation="horizontal"
        >
            <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_consum"/>
            <TextView
                    android:id="@+id/txtGraficosConsumo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_graficos_consumo"
                    android:textSize="12sp"
                android:visibility="gone"
                    android:fontFamily="@string/font_family_regular"
                    android:textColor="@color/colorActivate"
                app:autoSizeTextType="uniform"
                app:autoSizeMinTextSize="9sp"
                app:autoSizeMaxTextSize="12sp"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>