<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.OlvContraCorreoActivity">

    <include layout="@layout/view_toolbar_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="32dp"
                android:layout_marginTop="78dp"
                android:orientation="vertical">

            <ImageView android:layout_width="56dp"
                       android:layout_height="56dp"
                       android:layout_gravity="center_horizontal"
                       android:src="@drawable/ic_recupera_contrasenia"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@string/font_family_medium"
                    android:textColor="@color/text_color_primary"
                    android:text="@string/lbl_olvide_contrasenia"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:gravity="center_horizontal"
                    android:fontFamily="@string/font_family_light"
                    android:textColor="@color/text_color_secondary"
                    android:text="@string/lbl_ingresa_recupera_contrasenia"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilCorreoRecupContra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp">

                <EditText
                    android:id="@+id/edtxtCorreoRecupContra"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditText_formulario"
                    android:inputType="textEmailAddress"
                    android:imeOptions="actionSend"
                    android:hint="@string/lbl_correo" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:orientation="vertical">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            <Button
                    android:id="@+id/btnEnviarRecuContra"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="24dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:text="@string/lbl_btn_enviar_contrasenia_correo"
                    android:textColor="@android:color/white"
                    android:background="@drawable/button_blue_background"
            />

            <TextView
                    android:id="@+id/txtVolverRecuContra"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:fontFamily="sans-serif"
                    android:textStyle="normal"
                    android:textColor="@color/colorActivate"
                    android:lineSpacingExtra="8sp"
                    android:layout_gravity="center"
                    android:text="@string/lbl_volver_contrasenia_correo"
            />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
